fix(wofi): Remove warning for theme parsing

--- a/wofi/.config/wofi/style.css
+++ b/wofi/.config/wofi/style.css
@@ -2,7 +2,7 @@ window {
     border: 1px solid #0d47a1;
     background-color: #292b2e;
     color: #fafafa;
-    font: 15 "JetBrainsMono Nerd Font";
+    font: 15px "JetBrainsMono Nerd Font";
 }
 
 #input {
