--- a/waybar/.config/waybar/style.css
+++ b/waybar/.config/waybar/style.css
@@ -34,6 +34,7 @@ window#waybar {
 #disk,
 #network,
 #pulseaudio,
+#battery,
 #tray {
     padding: 0 0.6em;
 
@@ -54,7 +55,8 @@ window#waybar {
 #cpu.critical,
 #memory.critical,
 #disk.critical,
-#pulseaudio.muted {
+#pulseaudio.muted,
+#battery.critial {
     background: @urgent
 }
 
